fixed tranisition on smaller screens and made button sizes consistance

--- a/components/layout/Header/RequestButton.module.css
+++ b/components/layout/Header/RequestButton.module.css
@@ -1,7 +1,7 @@
 .bookButton {
   width: 60%;
   height: auto;
-  min-width: 150px;
+  width: 150px;
   transition: all 0.3s ease;
   cursor: pointer;
 }
@@ -16,7 +16,6 @@
 
 @media (width < 800px) {
   .bookButton {
-    min-width: 106px;
+    width: 106px;
   }
 }
-
