--- a/components/sections/Hero/Hero.module.css
+++ b/components/sections/Hero/Hero.module.css
@@ -13,6 +13,7 @@
   flex: 0;
   display: flex;
   align-items: center;
+  min-width: 0;
 }
 
 .active {
@@ -27,6 +28,7 @@
   justify-content: flex-start;
   gap: 2rem;
   position: relative;
+  overflow: hidden;
 }
 
 .redArea {
@@ -262,12 +264,12 @@
 @media (width < 800px) {
   .hero {
     height: 100vh;
-    overflow: visible;
+    overflow: hidden;
   }
 
   .profileImageWrapper {
     margin: 0;
-    width: 100vw;
+    width: 100%;
   }
 
   .profileImage {
